--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,31 @@
-alembic==1.16.5
-annotated-types==0.7.0
-anyio==4.10.0
-bcrypt==4.3.0
-click==8.1.8
-ecdsa==0.19.1
-exceptiongroup==1.3.0
-fastapi==0.116.1
-h11==0.16.0
-idna==3.10
-Mako==1.3.10
-MarkupSafe==3.0.2
+streamlit==1.32.2
+requests==2.31.0
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.3.0
+bcrypt==4.1.2
+click==8.1.7
+ecdsa==0.18.0
+exceptiongroup==1.2.0
+fastapi==0.110.0
+h11==0.14.0
+idna==3.6
+Mako==1.3.2
+MarkupSafe==2.1.3
 passlib==1.7.4
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dotenv==1.1.1
-python-jose==3.5.0
-rsa==4.9.1
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.43
-starlette==0.47.3
-tomli==2.2.1
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-uvicorn==0.35.0
+psycopg2-binary==2.9.9
+pyasn1==0.5.0
+pydantic==2.7.1
+python-dotenv==1.0.1
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.29
+starlette==0.36.3
+tomli==2.0.1
+typing-inspection==0.4.0
+typing_extensions>=4.12.0
+uvicorn==0.29.0
+pytest==8.2.1
+httpx==0.27.0
